--- a/app/src/main/res/drawable/tab_layout_style.xml
+++ b/app/src/main/res/drawable/tab_layout_style.xml
@@ -3,7 +3,7 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <corners android:radius="20dp"/>
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/light_black"/>
         </shape>
     </item>
 </selector>
