--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
-    android:layout_height="match_parent"
     android:id="@+id/containerReading"
-    android:background="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/myWhite"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".presentation.ReadingActivity">
 
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/success_toolbar" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/success_toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,11 +27,11 @@
                 android:id="@+id/bodyTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@color/myWhite"
                 android:padding="6dp"
                 android:text="@string/test"
+                android:textColor="@color/to_right_color"
                 android:textIsSelectable="true"
-                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="normal" />
 
