--- a/app/src/main/res/layout/fragment_happiness.xml
+++ b/app/src/main/res/layout/fragment_happiness.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@color/myWhite"
     android:clickable="true"
     android:focusable="true"
     android:layout_height="match_parent"
