--- a/app/src/main/res/layout/fragment_lovee.xml
+++ b/app/src/main/res/layout/fragment_lovee.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/myWhite"
     android:clickable="true"
     android:focusable="true"
     tools:context=".presentation.fragments.LoveFragment">
