Added new functions and fixed bugs, new style

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,5 +43,10 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <nl.dionsegijn.konfetti.KonfettiView
+        android:id="@+id/congratulationView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
