--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -61,6 +61,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline2">
 
+                <ImageView
+                    android:id="@+id/lifeFinishedIcon"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_margin="12dp"
+                    android:background="@drawable/dort"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:tint="#00FF0A" />
+
                 <com.moos.library.HorizontalProgressView
                     android:id="@+id/progressViewLife"
                     android:layout_width="0dp"
@@ -92,7 +102,7 @@
                     android:layout_height="0dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginEnd="36dp"
+                    android:layout_marginEnd="24dp"
                     android:src="@drawable/ic_goldfish"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +117,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="4dp"
                     android:rotation="320"
+
                     android:src="@drawable/ic_right"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -149,6 +160,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lifeBtn"
                 app:layout_constraintWidth_percent="0.49">
+
+                <ImageView
+                    android:id="@+id/successFinishedIcon"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_margin="12dp"
+                    android:background="@drawable/dort"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:tint="#00FF0A" />
 
 
                 <ImageView
@@ -233,6 +254,17 @@
                 app:layout_constraintHeight_percent="0.2"
                 app:layout_constraintTop_toBottomOf="@+id/lifeBtn"
                 app:layout_constraintWidth_percent="0.49">
+
+                <ImageView
+                    android:id="@+id/happyFinishedIcon"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_margin="12dp"
+                    android:background="@drawable/dort"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:tint="#00FF0A" />
+
 
                 <ImageView
                     android:layout_width="20dp"
@@ -322,6 +354,16 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/successBtn">
+
+                <ImageView
+                    android:id="@+id/loveFinishedIcon"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_margin="12dp"
+                    android:background="@drawable/dort"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:tint="#00FF0A" />
 
                 <ImageView
                     android:layout_width="20dp"
@@ -446,6 +488,7 @@
         android:layout_marginBottom="-36dp"
         android:textAlignment="center"
         app:circleBroken="true"
+        app:cpv_textMode="Text"
         app:end_color="@color/core_progress_color"
         app:end_progress="100"
         app:isTracked="true"
@@ -453,8 +496,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:progressTextColor="@color/progress_text_color"
         app:progressTextSize="36dp"
         app:start_color="@color/myWhite"
         app:start_progress="0"
         app:track_width="26dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:text="@string/your_progress"
+        android:textColor="@color/progress_text_color"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/progressCore"
+        app:layout_constraintEnd_toEndOf="@+id/progressCore"
+        app:layout_constraintStart_toStartOf="@+id/progressCore" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
