--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,5 +36,6 @@
     <color name="empty_box_color">#000000</color>
     <color name="core_progress_color">#591BE4</color>
     <color name="like_color">#000000</color>
+    <color name="progress_text_color">#DD5E7D</color>
 
 </resources>
