Added new functions

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,6 +10,7 @@
     <color name="defColor">#1A232C</color>
     <color name="reading_toolbar_color">#1A232C</color>
     <color name="like_color">#495665</color>
+    <color name="clear_color">#41556C</color>
 
 
     <color name="to_right_color">#FFFFFF</color>
