--- a/app/src/main/res/drawable/clear_item.xml
+++ b/app/src/main/res/drawable/clear_item.xml
@@ -11,7 +11,7 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="16dp" />
-            <solid android:color="#716D6D" />
+            <solid android:color="@color/clear_color" />
         </shape>
     </item>
 
