--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:fontFamily="@font/light"
-        android:text="#Развивайся"
+        android:text="@string/motivation_txt"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
