--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/containerReading"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/myWhite"
@@ -19,6 +18,9 @@
         tools:ignore="UselessParent">
 
         <LinearLayout
+            android:id="@+id/containerReading"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -32,7 +34,6 @@
                 android:padding="6dp"
                 android:text="@string/test"
                 android:textColor="@color/to_right_color"
-                android:textIsSelectable="true"
                 android:textSize="18sp"
                 android:textStyle="normal" />
 
