--- a/app/src/main/res/layout/success_toolbar.xml
+++ b/app/src/main/res/layout/success_toolbar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@drawable/style_toolbar"
@@ -18,6 +19,7 @@
         app:tint="@color/to_right_color" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
