--- a/app/src/main/res/drawable/life_item_style.xml
+++ b/app/src/main/res/drawable/life_item_style.xml
@@ -3,12 +3,7 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <corners android:radius="20dp"/>
-            <gradient
-                android:angle="45"
-                android:endColor="@color/purple_life2"
-                android:centerColor="@color/purple_life"
-                android:startColor="@color/purple_life"
-                android:type="linear" />
+            <solid android:color="@color/light_black"/>
         </shape>
     </item>
 </selector>
