--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,17 +52,18 @@
                     android:layout_height="270dp"
                     android:layout_marginBottom="-36dp"
                     android:textAlignment="center"
-                    app:circleBroken="true"
-                    app:cpv_textMode="Text"
+                    app:circleBroken="false"
+                    app:cpv_textMode="Percent"
                     app:end_color="@color/core_progress_color"
                     app:isTracked="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:progressTextColor="@color/progress_text_color"
-                    app:progressTextSize="36dp"
+                    app:progressTextColor="@color/to_right_color"
+                    app:progressTextSize="60dp"
                     app:start_color="@color/core_progress_color"
                     app:start_progress="0"
+                    app:trackColor="#E3DDDD"
                     app:track_width="26dp" />
 
                 <TextView
@@ -70,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="100dp"
                     android:text="@string/your_progress"
-                    android:textColor="@color/progress_text_color"
+                    android:textColor="@color/to_right_color"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/progressCore"
                     app:layout_constraintEnd_toEndOf="@+id/progressCore"
