--- a/app/src/main/res/layout/chapter_item.xml
+++ b/app/src/main/res/layout/chapter_item.xml
@@ -1,4 +1,6 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chapterBtn"
     android:layout_width="match_parent"
     android:layout_height="130dp"
@@ -11,9 +13,7 @@
     app:layout_constraintHeight_percent="0.2"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/guideline2"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:layout_constraintTop_toTopOf="@+id/guideline2">
 
     <ImageView
         android:id="@+id/finished_icon"
@@ -22,8 +22,7 @@
         android:layout_margin="12dp"
         android:background="@drawable/dort"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.moos.library.HorizontalProgressView
         android:id="@+id/chapterProgress"
