--- a/app/src/main/res/layout/activity_data_importing.xml
+++ b/app/src/main/res/layout/activity_data_importing.xml
@@ -53,6 +53,7 @@
         android:textStyle="bold" />
 
     <ImageView
+        android:id="@+id/cloudImg"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
