--- a/app/src/main/res/layout/activity_data_importing.xml
+++ b/app/src/main/res/layout/activity_data_importing.xml
@@ -1,76 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/myWhite"
     tools:context=".presentation.DataImportingActivity">
 
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_margin="24dp"
-        android:text="Внедряйте данные из облака."
-        android:textColor="@color/to_right_color"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/myWhite"
+        android:backgroundTint="@color/myWhite">
 
-    <TextView
-        android:id="@+id/tv2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv"
-        android:layout_alignStart="@+id/tv"
-        android:layout_alignEnd="@+id/tv"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="-20dp"
-        android:text="Просто нажмите на кнопку и подождите."
-        android:textColor="@color/to_right_color"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/tv"
-        app:layout_constraintTop_toBottomOf="@+id/tv" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/start"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="48dp"
+            android:layout_marginBottom="48dp"
+            android:background="@drawable/item_style"
+            android:text="@string/start" />
 
-    <ImageView
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="8dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="12dp"
-        android:src="@drawable/ic_baseline_help_outline_24"
-        android:textColor="@color/to_right_color"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="24dp"
+            android:text="Внедряйте данные из облака."
+            android:textColor="@color/to_right_color"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/cloudImg"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/ic_cloud2"
-        app:tint="#656A70" />
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv"
+            android:layout_alignStart="@+id/tv"
+            android:layout_alignEnd="@+id/tv"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="-20dp"
+            android:text="Просто нажмите на кнопку и подождите."
+            android:textColor="@color/to_right_color"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/tv"
+            app:layout_constraintTop_toBottomOf="@+id/tv" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/start"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="48dp"
-        android:background="@drawable/item_style"
-        android:text="@string/start" />
+        <ImageView
+            android:id="@+id/info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/ic_baseline_help_outline_24"
+            android:textColor="@color/to_right_color"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/info"
+            android:layout_alignBottom="@+id/info"
+            android:layout_marginBottom="0dp"
+            android:layout_toStartOf="@+id/info"
+            android:src="@drawable/ic_baseline_add_circle_outline_24"
+            android:textColor="@color/to_right_color"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/cloudImg"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_cloud2"
+            app:tint="#656A70" />
+
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/progressView"
+            style="@style/SpinKitView.Large.WanderingCubes"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/cloudImg"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="24dp"
+            android:indeterminate="true"
+            app:SpinKit_Color="@color/to_right_color" />
+
+    </RelativeLayout>
+
+
+</FrameLayout>
